manifests/ingress-7.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "diaggarw-dd59"
    labels:
        app: "diaggarw-dd59"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: diaggarw9482-diaggarw-dd59.8fd377fc1d604524b4e1.southindia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "diaggarw-dd59"
                servicePort: 8080
